# github-repo-analyzer

./: .gitignore  README.md  index.html  install.bat  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  LoadingSkeleton.tsx  SettingsDialog.tsx  ThemeToggle.tsx
src/components/ui/: separator.tsx  tabs.tsx
src/contexts/: ThemeContext.tsx
src/services/: githubApi.ts
src/types/: github.ts
