[package]
name = "github-repo-analyzer"
version = "0.1.0"
description = "GitHub 仓库可视化分析工具"
authors = ["you"]
edition = "2021"

[lib]
name = "github_repo_analyzer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
